# directory-thumbnails

./: README.md  main.go
samples/: file-structure.txt
src/: CMakeLists.txt  main.c
src/main/: main.c
src/thumbnail/: CMakeLists.txt  get_thumbnail_paths_for_directory.c  get_thumbnails_for_directory.c  thumbnail.h
thumbnails/: thumbnails.go
